--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "<p align=\"center\">\r   <img src=\"https://skillicons.dev/icons?i=mongodb,express,react,nodejs\" />\r </p>\r <p align=\"center\">\r   <strong>Build Your First Independent MERN Stack Project</strong>\r </p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon backend/server.js"
   },
   "repository": {
     "type": "git",
